Fix skin overwriting z-index (#280)

--- a/less/style.less
+++ b/less/style.less
@@ -166,7 +166,7 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	}
 }
 
-.bootbox {
+.bootbox.modal {
 	z-index: 100001;
 }
 
